# quizpane

./: .clang-format  .gitignore  CLA.md  CMakeLists.txt  CMakePresets.json  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml  release-macos-arm64.yml  release.yml
apps/bank-studio/: CMakeLists.txt
apps/bank-studio/engine/include/quizpane/studio/: checkpoint_store.hpp  chunker.hpp  document_extractor.hpp  generation_workflow.hpp  model_client.hpp  option_label.hpp  review_result.hpp  rule_based_generator.hpp
apps/bank-studio/engine/src/: checkpoint_store.cpp  chunker.cpp  document_extractor.cpp  generation_workflow.cpp  model_client.cpp  option_label.cpp  rule_based_generator.cpp
apps/bank-studio/resources/: app-icon.icns  resources.qrc  studio-light.qss  studio.qss
apps/bank-studio/src/: main.cpp  model_settings_dialog.cpp  model_settings_dialog.hpp  source_row_widget.cpp  source_row_widget.hpp  source_validation.hpp  studio_window.cpp  studio_window.hpp  styled_dropdown.cpp  styled_dropdown.hpp
apps/desktop-qt/: CMakeLists.txt
apps/desktop-qt/resources/: Info.plist.in  app-icon.icns  desktop-light.qss  desktop.qss  resources.qrc  windows.rc
apps/desktop-qt/src/: app_services.hpp  app_settings.cpp  app_settings.hpp  main.cpp
apps/desktop-qt/src/platform/: file_association.cpp  file_association.hpp  global_hotkey.cpp  global_hotkey.hpp  window_pinning.cpp  window_pinning.hpp  window_pinning.mm
apps/desktop-qt/src/ui/: app_dialogs.cpp  app_dialogs.hpp  line_icons.cpp  line_icons.hpp  main_window.cpp  main_window.hpp  material_card.cpp  material_card.hpp  question_navigator.cpp  question_navigator.hpp
cmake/: quizpane_pch.hxx
core/: CMakeLists.txt
core/include/quizpane/: attempt.hpp  bank_validator.hpp  diagnostic_logger.hpp  draft_store.hpp  image_privacy_filter.hpp  io_utils.hpp  provider_response_router.hpp
core/src/: attempt.cpp  bank_validator.cpp  diagnostic_logger.cpp  draft_store.cpp  image_privacy_filter.cpp  io_utils.cpp  provider_response_router.cpp
deploy/: README.md
deploy/env/: release-proxy.env.example
deploy/nginx/: quizpane-global.conf  quizpane.conf.template
deploy/scripts/: bootstrap-ubuntu.sh  build-and-deploy-site.sh  install-artifacts.sh
deploy/systemd/: quizpane-release-proxy.service
doc/: 2011北京卷PDF回归报告.md  体验与代码评审整理.md  扫描识别规则审查-单选多选覆盖度.md
docs/: AI题库生成与声明式Provider方案.md  Cpp从0到1学习导读-基于QuizPane.md  共享材料与题组支持交接方案.md  官网静态页与Release代理部署方案.md  架构与Provider开发导读.md  规则结构化题库后端处理流程CodeReview.md  阶段4-5交接文档.md  阶段4-5后端处理流程CodeReview.md  隐蔽模式UI与题目图片处理方案.md  难样本复核与统一LLM调度方案.md  项目里程碑与手动冒烟测试.md  题库生成器UI与集成方案.md  题库管理与跨平台构建打包指南.md
legal/: THIRD_PARTY_CONTENT_POLICY.md
packaging/linux/: org.quizpane.app.desktop  org.quizpane.bank-studio.desktop  org.quizpane.provider.xml
packaging/windows/: QuizPane.iss
providers/demo/: CMakeLists.txt  demo_provider.cpp
release-proxy/: README.md  quizpane-release-proxy
schemas/: declarative-provider-v1.schema.json  declarative-provider.schema.json
schemas/examples/declarative/: manifest.json
schemas/examples/declarative-materials/: manifest.json
schemas/examples/declarative-materials/content/: bank.json
schemas/examples/declarative/content/: bank.json
scripts/: audit-beijing-bank.py  build-macos.sh  build-uos.sh  build-windows.ps1
sdk/: CMakeLists.txt
sdk/include/quizpane/: declarative_provider.hpp  provider_abi.h  provider_installer.hpp  provider_loader.hpp  running_app_handoff.hpp  secret_store.hpp  zip_archive.hpp
sdk/src/: declarative_provider.cpp  provider_installer.cpp  provider_loader.cpp  running_app_handoff.cpp  secret_store.cpp  zip_archive.cpp
tests/: CMakeLists.txt  attempt_roundtrip_test.cpp  bank_validator_test.cpp  checkpoint_store_test.cpp  chunker_test.cpp  declarative_provider_flow_test.cpp  declarative_provider_materials_test.cpp  diagnostic_crash_test.cpp  diagnostic_logger_test.cpp  document_extractor_test.cpp  draft_store_test.cpp  generation_workflow_test.cpp  image_privacy_filter_test.cpp  material_card_test.cpp  material_package_e2e_test.cpp  model_client_test.cpp  pdf_regression_harness.cpp  provider_flow_test.cpp  provider_installer_test.cpp  provider_loader_test.cpp  provider_response_router_test.cpp  provider_rpc_smoke.cpp  question_navigator_test.cpp  rule_based_generator_test.cpp  running_app_handoff_test.cpp
tools/bank-generator/: CMakeLists.txt  README.md  main.cpp
tools/bank-generator/examples/: example-bank.json  example-source.txt
website/: README.md
website/scripts/: build-site.mjs
website/src/: content.json  index.html  main.css  main.js
